# calculator-demo

./: README.md  pyproject.toml
scripts/: create_issues.py
src/: calculator.py  main.py
tests/: test_calculator.py
