[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-demo"
version = "0.1.0"
description = "A simple command-line calculator"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
calculator = "src.main:main"
